--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 </div>
 
         <div class="couple-names">
-            <span id="partner1">phupa</span>
+            <span id="partner1">phupha</span>
             <span class="heart-icon">❤️</span>
             <span id="partner2">Yayee</span>
         </div>
